[package]
name = "zappy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde_json = "1.0.105"
serde = { version = "1.0", features = ["derive"] }
comfy-table = "7.0.1"
dateparser = "0.2.0"
